--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- Meta names -->
 	<title>Blog website</title>
 	<!-- Custom Style -->
-	<link rel="stylesheet" type="text/css" href="assets/css/Style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/line-awesome/css/line-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/owl.theme.default.min.css">
